tests/paczka1/small_fuzzy/19341149.err
Error in line 2: a1iPTix S180 62,4
Error in line 9: Zbv54U A887 51,6
